correction citation qui s'affichait mal en version mobile

--- a/Starting website 2/style.css
+++ b/Starting website 2/style.css
@@ -659,13 +659,13 @@ a {
     font-weight: 300;
     font-size: 1.4em;
     line-height: 120%;
+    margin-bottom: -1px;
 }
 
 .auteur_citation{
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light";
     font-weight: lighter;
     font-size: 1.5em;
-    line-height: 40%;
 }
 
 .container {
@@ -789,7 +789,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
